# django-magicadmin

./: .gitignore  README.md  boot_django.py  load_tests.py  pyproject.toml
django_magicadmin/: apps.py  forms.py  urls.py  urls_testing.py
django_magicadmin/migrations/: 0002_magiclink_already_used_and_more.py  0003_alter_magiclink_expires_at_and_more.py  0004_magiclink_used_at_alter_magiclink_secret_identifier.py  0005_alter_magiclink_secret_identifier.py  0006_alter_magiclink_secret_identifier.py  0007_alter_magiclink_secret_identifier.py
django_magicadmin/static/magicadmin/css/: magicadmin.css
django_magicadmin/templates/: login.html
django_magicadmin/tests/: test_models.py  test_views.py
magicadmin/: admin.py  apps.py  forms.py  models.py  urls.py  urls_testing.py  views.py
magicadmin/migrations/: 0001_initial.py  0002_magiclink_already_used_and_more.py  0003_alter_magiclink_expires_at_and_more.py  0004_magiclink_used_at_alter_magiclink_secret_identifier.py
magicadmin/templates/: login.html
magicadmin/templates/emails/: magiclogin.html  magiclogin.txt
magicadmin/tests/: test_models.py  test_views.py
