[tool.poetry]
name = "django-magicadmin"
version = "0.1.0"
description = ""
authors = ["Vinicius Mesel <me@vmesel.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Django = "^4.1.2"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
