[tool.poetry]
name = "django_magicadmin"
version = "0.1.0"
description = ""
authors = ["Vinicius Mesel <me@vmesel.com>"]
license = "MIT"
readme = "README.md"
keywords = ["django_magicadmin", "django magic login", "django app", "django auth"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
Django = "^4.1.2"
black = "^22.8.0"
isort = "^5.10.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
